[project]
name = "kerag-mcp"
version = "0.1.0"
description = "MCP server for KERAG knowledge base"
authors = [
    { name = "Tong", email = "TongWang_2000@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "kerag @ git+https://github.com/TongWang-AI4S/KERAG.git",
    "pydantic",
    "python-dotenv",
]

[project.scripts]
kerag-mcp = "kerag_mcp.kerag_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kerag_mcp"]

[tool.uv.sources]
kerag = { git = "https://github.com/TongWang-AI4S/KERAG.git" }
